@@ -1,6 +1,7 @@
 Linux-PAM NEWS -- history of user-visible changes.
 
 * Fix building of static variants of libpam, libpamc and libpam_misc
+* pam_listfile: Add support for password and session management
 
 Release 0.99.3.0
 
